k8s/movies-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies
spec:
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
        - name: web
          image: maor30levy/movie-app-movies:latest
          ports:
            - containerPort: 5002
