k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: web
          image: maor30levy/movie-app-server:latest
          ports:
            - containerPort: 4000
