k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: web
          image: maor30levy/movie-app-users:latest
          ports:
            - containerPort: 5001
