k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  type: LoadBalancer
  selector:
    app: auth
  ports:
    - port: 5000
      targetPort: 5000
