k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  type: ClusterIP
  selector:
    db: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
