k8s/movies-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movies-service
spec:
  type: ClusterIP
  selector:
    app: movies
  ports:
    - port: 5002
      targetPort: 5002
