k8s/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: LoadBalancer
  selector:
    app: server
  ports:
    - port: 4000
      targetPort: 4000
