k8s/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
    - port: 5001
      targetPort: 5001
